--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="number">7</li>
                     <li class="number">8</li>
                     <li class="number">9</li>
-                    <li id="del" onclick="del()">DEL</li>
+                    <li id="del__btn" onclick="del()">DEL</li>
 
                     <li class="number">4</li>
                     <li class="number">5</li>
@@ -54,8 +54,8 @@
                     <li class="number">/</li>
                     <li class="number" id="mult" hidden>*</li>
 
-                    <li id="reset" onclick="res()">RESET</li>
-                    <li id="equal" onclick="equal()">=</li>
+                    <li id="reset__btn" onclick="res()">RESET</li>
+                    <li id="equal__btn" onclick="equal()">=</li>
                 </ul>
             </div>
 
