--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
             </div>
             <div class="calculator__numbers">
                 <ul class="calculator__numbers_inner">
-                    <li class="number">7</li>
-                    <li class="number">8</li>
-                    <li class="number">9</li>
+                    <li class="number" onclick="addToDisplay(7)">7</li>
+                    <li class="number" onclick="addToDisplay(8)">8</li>
+                    <li class="number" onclick="addToDisplay(9)">9</li>
                     <li id="del__btn" onclick="del()">DEL</li>
 
-                    <li class="number">4</li>
-                    <li class="number">5</li>
-                    <li class="number">6</li>
-                    <li class="number">+</li>
+                    <li class="number" onclick="addToDisplay(4)">4</li>
+                    <li class="number" onclick="addToDisplay(5)">5</li>
+                    <li class="number" onclick="addToDisplay(6)">6</li>
+                    <li class="number" onclick="addToDisplay('+')">+</li>
 
-                    <li class="number">1</li>
-                    <li class="number">2</li>
-                    <li class="number">3</li>
-                    <li class="number">-</li>
+                    <li class="number" onclick="addToDisplay(1)">1</li>
+                    <li class="number" onclick="addToDisplay(2)">2</li>
+                    <li class="number" onclick="addToDisplay(3)">3</li>
+                    <li class="number" onclick="addToDisplay('-')">-</li>
 
-                    <li class="number">.</li>
-                    <li class="number">0</li>
-                    <li class="number">/</li>
-                    <li class="number" id="mult" hidden>*</li>
+                    <li class="number" onclick="addToDisplay('.')">.</li>
+                    <li class="number" onclick="addToDisplay(0)">0</li>
+                    <li class="number" onclick="addToDisplay('/')">/</li>
+                    <li class="number" onclick="addToDisplay('*')">x</li>
 
                     <li id="reset__btn" onclick="res()">RESET</li>
                     <li id="equal__btn" onclick="equal()">=</li>
