--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
             </div>
             <div class="calculator__numbers">
                 <ul class="calculator__numbers_inner">
-                    <li class="number" onclick="addToDisplay(7)" tabindex="0">7</li>
-                    <li class="number" onclick="addToDisplay(8)" tabindex="0">8</li>
-                    <li class="number" onclick="addToDisplay(9)" tabindex="0">9</li>
-                    <li id="del__btn" onclick="del()" tabindex="0">DEL</li>
+                    <li class="number" onclick="addToDisplay(7)">7</li>
+                    <li class="number" onclick="addToDisplay(8)">8</li>
+                    <li class="number" onclick="addToDisplay(9)">9</li>
+                    <li id="del__btn" onclick="del()">DEL</li>
 
-                    <li class="number" onclick="addToDisplay(4)" tabindex="0">4</li>
-                    <li class="number" onclick="addToDisplay(5)" tabindex="0">5</li>
-                    <li class="number" onclick="addToDisplay(6)" tabindex="0">6</li>
-                    <li class="number" onclick="addToDisplay('+')" tabindex="0">+</li>
+                    <li class="number" onclick="addToDisplay(4)">4</li>
+                    <li class="number" onclick="addToDisplay(5)">5</li>
+                    <li class="number" onclick="addToDisplay(6)">6</li>
+                    <li class="number" onclick="addToDisplay('+')">+</li>
 
-                    <li class="number" onclick="addToDisplay(1)" tabindex="0">1</li>
-                    <li class="number" onclick="addToDisplay(2)" tabindex="0">2</li>
-                    <li class="number" onclick="addToDisplay(3)" tabindex="0">3</li>
-                    <li class="number" onclick="addToDisplay('-')" tabindex="0">-</li>
+                    <li class="number" onclick="addToDisplay(1)">1</li>
+                    <li class="number" onclick="addToDisplay(2)">2</li>
+                    <li class="number" onclick="addToDisplay(3)">3</li>
+                    <li class="number" onclick="addToDisplay('-')">-</li>
 
-                    <li class="number" onclick="addToDisplay('.')" tabindex="0">.</li>
-                    <li class="number" onclick="addToDisplay(0)" tabindex="0">0</li>
-                    <li class="number" onclick="addToDisplay('/')" tabindex="0">/</li>
-                    <li class="number" onclick="addToDisplay('*')" tabindex="0">x</li>
+                    <li class="number" onclick="addToDisplay('.')">.</li>
+                    <li class="number" onclick="addToDisplay(0)">0</li>
+                    <li class="number" onclick="addToDisplay('/')">/</li>
+                    <li class="number" onclick="addToDisplay('*')">x</li>
 
-                    <li id="reset__btn" onclick="res()" tabindex="0">RESET</li>
-                    <li id="equal__btn" onclick="equal()" tabindex="0">=</li>
+                    <li id="reset__btn" onclick="res()">RESET</li>
+                    <li id="equal__btn" onclick="equal()">=</li>
                 </ul>
             </div>
         </div>
