--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="calculator__top_right flex">
 
                     <div class="calculator__top_right_toggle flex">
-                        <div class="toggle__numbers flex">
+                        <div class="toggle__numbers flex" role="theme switch">
                             <p id="theme1">1</p>
                             <p id="theme2">2</p>
                             <p id="theme3">3</p>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <div class="calculator__display">
+            <div class="calculator__display" role="display">
                 <p id="display__numbers">0</p>
             </div>
             <div class="calculator__numbers">
